--- a/index.html
+++ b/index.html
@@ -1,76 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>JS Beat-Machine</title>
-    <!-- core CSS file -->
-    <link rel="stylesheet" href="style.css">
+	<meta charset="UTF-8">
+	<title>JS Beat-Machine</title>
+	<!-- core CSS file -->
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <div class="keys">
-        
-    </div>
-    
-<!-- 
- <div id='pads'>
-      <button class='pad' id='113'>q</button>
-      <button class='pad' id='119'>w</button>
-      <button class='pad' id='101'>e</button>
-      <button class='pad' id='114'>r</button>
-      <button class='pad' id='97'>a</button>
-      <button class='pad' id='115'>s</button>
-      <button class='pad' id='100'>d</button>
-      <button class='pad' id='102'>f</button>
-      <button class='pad' id='122'>z</button>
-      <button class='pad' id='120'>x</button>
-      <button class='pad' id='99'>c</button>
-      <button class='pad' id='118'>v</button>
-    </div> -->
+	<div class="pads">
+		
+		<button class="pad" id="113">
+			<kbd>Q</kbd>
+			<span class="sound">clap</span>
+		</button>
+		
+		<button class="pad" id="119">
+			<kbd>W</kbd>
+			<span class="sound">hihat</span>
+		</button>
+		
+		<button class="pad" id="101">
+			<kbd>E</kbd>
+			<span class="sound">kick</span>
+		</button>
+		
+		<button class="pad" id="97">
+			<kbd>A</kbd>
+			<span class="sound">openhat</span>
+		</button>
+		
+		<button class="pad" id="115">
+			<kbd>S</kbd>
+			<span class="sound">boom</span>
+		</button>
+
+		<button class="pad" id="100">
+			<kbd>D</kbd>
+			<span class="sound">ride</span>
+		</button>
+
+		<button class="pad" id="122">
+			<kbd>Z</kbd>
+			<span class="sound">snare</span>
+		</button>
+
+		<button class="pad" id="120">
+			<kbd>X</kbd>
+			<span class="sound">tom</span>
+		</button>
+
+		<button class="pad" id="99">
+			<kbd>C</kbd>
+			<span class="sound">tink</span>
+		</button>
+
+	</div><!-- 	end .pads -->
 
 
-
-
-<!-- 
- <div class="keys">
-    <div data-key="65" class="key">
-      <kbd>A</kbd>
-      <span class="sound">clap</span>
-    </div>
-    <div data-key="83" class="key">
-      <kbd>S</kbd>
-      <span class="sound">hihat</span>
-    </div>
-    <div data-key="68" class="key">
-      <kbd>D</kbd>
-      <span class="sound">kick</span>
-    </div>
-    <div data-key="70" class="key">
-      <kbd>F</kbd>
-      <span class="sound">openhat</span>
-    </div>
-    <div data-key="71" class="key">
-      <kbd>G</kbd>
-      <span class="sound">boom</span>
-    </div>
-    <div data-key="72" class="key">
-      <kbd>H</kbd>
-      <span class="sound">ride</span>
-    </div>
-    <div data-key="74" class="key">
-      <kbd>J</kbd>
-      <span class="sound">snare</span>
-    </div>
-    <div data-key="75" class="key">
-      <kbd>K</kbd>
-      <span class="sound">tom</span>
-    </div>
-    <div data-key="76" class="key">
-      <kbd>L</kbd>
-      <span class="sound">tink</span>
-    </div>
-  </div> -->
-
-    <script src="main.js"></script>
+	<!-- core JS file -->
+	<script src="main.js"></script>
 </body>
 </html>
