--- a/index.html
+++ b/index.html
@@ -60,5 +60,10 @@
 
 	<!-- core JS file -->
 	<script src="main.js"></script>
+	<!-- SoundJS library -->
+	<script src="https://code.createjs.com/soundjs-0.6.2.min.js"></script>
+	<!-- PreloadJS library -->
+	<script src="https://code.createjs.com/preloadjs-0.6.2.min.js"></script>
+
 </body>
 </html>
