reorganise structure of the app

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>JS Beat-Machine</title>
 	<!-- core CSS file -->
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
@@ -59,7 +59,7 @@
 
 
 	<!-- core JS file -->
-	<script src="main.js"></script>
+	<script src="assets/js/main.js"></script>
 	<!-- SoundJS library -->
 	<script src="https://code.createjs.com/soundjs-0.6.2.min.js"></script>
 	<!-- PreloadJS library -->
