loading audio files into the app WIP

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 
 	<!-- core JS file -->
-	<script src="assets/js/main.js"></script>
+	<script src="assets/js/script.js"></script>
 	<!-- SoundJS library -->
 	<script src="https://code.createjs.com/soundjs-0.6.2.min.js"></script>
 	<!-- PreloadJS library -->
