add jQuery DOM manipulation and new node in the AudioContext Interface

--- a/index2.html
+++ b/index2.html
@@ -11,47 +11,47 @@
 
 	<section id="pads">
 
-		<button id="pad1" data-sound="assets/sounds/clap.wav">
+		<button id="pad1" data-sound="http://assets/sounds/clap.wav">
 			<kbd>Q</kbd>
 			<span class="sound">clap</span>
 		</button>
 
-		<button id="pad2" data-sound="assets/sounds/hihat.wav">
+		<button id="pad2" data-sound="http://assets/sounds/hihat.wav">
 			<kbd>W</kbd>
 			<span class="sound">hihat</span>
 		</button>
 
-		<button id="pad3" data-sound="assets/sounds/kick.wav">
+		<button id="pad3" data-sound="http://assets/sounds/kick.wav">
 			<kbd>E</kbd>
 			<span class="sound">kick</span>
 		</button>
 
-		<button id="pad4" data-sound="assets/sounds/openhat.wav">
+		<button id="pad4" data-sound="http://assets/sounds/openhat.wav">
 			<kbd>A</kbd>
 			<span class="sound">openhat</span>
 		</button>
 
-		<button id="pad5" data-sound="assets/sounds/boom.wav">
+		<button id="pad5" data-sound="http://assets/sounds/boom.wav">
 			<kbd>S</kbd>
 			<span class="sound">boom</span>
 		</button>
 
-		<button id="pad6" data-sound="assets/sounds/ride.wav">
+		<button id="pad6" data-sound="http://assets/sounds/ride.wav">
 			<kbd>D</kbd>
 			<span class="sound">ride</span>
 		</button>
 
-		<button id="pad7" data-sound="assets/sounds/snare.wav">
+		<button id="pad7" data-sound="http://assets/sounds/snare.wav">
 			<kbd>Z</kbd>
 			<span class="sound">snare</span>
 		</button>
 
-		<button id="pad8" data-sound="assets/sounds/tom.wav">
+		<button id="pad8" data-sound="http://assets/sounds/tom.wav">
 			<kbd>X</kbd>
 			<span class="sound">tom</span>
 		</button>
 
-		<button id="pad9" data-sound="assets/sounds/tink.wav">
+		<button id="pad9" data-sound="http://assets/sounds/tink.wav">
 			<kbd>C</kbd>
 			<span class="sound">tink</span>
 		</button>	
