Add: data-key attributes

--- a/index2.html
+++ b/index2.html
@@ -11,52 +11,56 @@
 
 	<section id="pads">
 
-		<button id="pad1" data-sound="assets/sounds/clap.wav">
+		<button id="pad1" data-sound="assets/sounds/clap.wav" data-key="113">
 			<kbd>Q</kbd>
 			<span class="sound">clap</span>
 		</button>
 
-		<button id="pad2" data-sound="assets/sounds/hihat.wav">
+		<button id="pad2" data-sound="assets/sounds/hihat.wav" data-key="119">
 			<kbd>W</kbd>
 			<span class="sound">hihat</span>
 		</button>
 
-		<button id="pad3" data-sound="assets/sounds/kick.wav">
+		<button id="pad3" data-sound="assets/sounds/kick.wav" data-key="101">
 			<kbd>E</kbd>
 			<span class="sound">kick</span>
 		</button>
 
-		<button id="pad4" data-sound="assets/sounds/openhat.wav">
+		<button id="pad4" data-sound="assets/sounds/openhat.wav" data-key="97">
 			<kbd>A</kbd>
 			<span class="sound">openhat</span>
 		</button>
 
-		<button id="pad5" data-sound="assets/sounds/boom.wav">
+		<button id="pad5" data-sound="assets/sounds/boom.wav" data-key="115">
 			<kbd>S</kbd>
 			<span class="sound">boom</span>
 		</button>
 
-		<button id="pad6" data-sound="assets/sounds/ride.wav">
+		<button id="pad6" data-sound="assets/sounds/ride.wav" data-key="100">
 			<kbd>D</kbd>
 			<span class="sound">ride</span>
 		</button>
 
-		<button id="pad7" data-sound="assets/sounds/snare.wav">
+		<button id="pad7" data-sound="assets/sounds/snare.wav" data-key="122">
 			<kbd>Z</kbd>
 			<span class="sound">snare</span>
 		</button>
 
-		<button id="pad8" data-sound="assets/sounds/tom.wav">
+		<button id="pad8" data-sound="assets/sounds/tom.wav" data-key="120">
 			<kbd>X</kbd>
 			<span class="sound">tom</span>
 		</button>
 
-		<button id="pad9" data-sound="assets/sounds/tink.wav">
+		<button id="pad9" data-sound="assets/sounds/tink.wav" data-key="99">
 			<kbd>C</kbd>
 			<span class="sound">tink</span>
 		</button>	
 
 	</section>	<!-- end #pads -->
+
+
+
+
 
 	<!-- core JS file -->
 	<script src="assets/js/app.js"></script>
