--- a/index2.html
+++ b/index2.html
@@ -60,6 +60,14 @@
 
 
 
+	<div id="volume-control">
+		<label for="volume">Volume</label>
+		<input type="range" min="0" max="5" step="0.1" value="1" data-control="gain" name="volume">
+	</div> <!-- end #volume-control -->
+
+
+
+
 
 
 	<!-- core JS file -->
