--- a/index2.html
+++ b/index2.html
@@ -8,63 +8,77 @@
 </head>
 <body>
 
+	<div id="wrapper">
 
-	<section id="pads">
+		<section id="pads">
 
-		<button id="pad1" data-sound="assets/sounds/clap.wav" data-key="113">
-			<kbd>Q</kbd>
-			<span class="sound">clap</span>
-		</button>
+			<div class="row"> <!-- first row -->
 
-		<button id="pad2" data-sound="assets/sounds/hihat.wav" data-key="119">
-			<kbd>W</kbd>
-			<span class="sound">hihat</span>
-		</button>
+				<button id="pad1" data-sound="assets/sounds/clap.wav" data-key="113">
+					<kbd>Q</kbd>
+					<span class="sound">clap</span>
+				</button>
 
-		<button id="pad3" data-sound="assets/sounds/kick.wav" data-key="101">
-			<kbd>E</kbd>
-			<span class="sound">kick</span>
-		</button>
+				<button id="pad2" data-sound="assets/sounds/hihat.wav" data-key="119">
+					<kbd>W</kbd>
+					<span class="sound">hihat</span>
+				</button>
 
-		<button id="pad4" data-sound="assets/sounds/openhat.wav" data-key="97">
-			<kbd>A</kbd>
-			<span class="sound">openhat</span>
-		</button>
+				<button id="pad3" data-sound="assets/sounds/kick.wav" data-key="101">
+					<kbd>E</kbd>
+					<span class="sound">kick</span>
+				</button>
 
-		<button id="pad5" data-sound="assets/sounds/boom.wav" data-key="115">
-			<kbd>S</kbd>
-			<span class="sound">boom</span>
-		</button>
+			</div> <!-- end first row -->
 
-		<button id="pad6" data-sound="assets/sounds/ride.wav" data-key="100">
-			<kbd>D</kbd>
-			<span class="sound">ride</span>
-		</button>
+			<div class="row"> <!-- second row -->
 
-		<button id="pad7" data-sound="assets/sounds/snare.wav" data-key="122">
-			<kbd>Z</kbd>
-			<span class="sound">snare</span>
-		</button>
+				<button id="pad4" data-sound="assets/sounds/openhat.wav" data-key="97">
+					<kbd>A</kbd>
+					<span class="sound">openhat</span>
+				</button>
 
-		<button id="pad8" data-sound="assets/sounds/tom.wav" data-key="120">
-			<kbd>X</kbd>
-			<span class="sound">tom</span>
-		</button>
+				<button id="pad5" data-sound="assets/sounds/boom.wav" data-key="115">
+					<kbd>S</kbd>
+					<span class="sound">boom</span>
+				</button>
 
-		<button id="pad9" data-sound="assets/sounds/tink.wav" data-key="99">
-			<kbd>C</kbd>
-			<span class="sound">tink</span>
-		</button>	
+				<button id="pad6" data-sound="assets/sounds/ride.wav" data-key="100">
+					<kbd>D</kbd>
+					<span class="sound">ride</span>
+				</button>
 
-	</section>	<!-- end #pads -->
+			</div> <!-- end second row -->
+
+			<div class="row"> <!-- third row -->
+
+				<button id="pad7" data-sound="assets/sounds/snare.wav" data-key="122">
+					<kbd>Z</kbd>
+					<span class="sound">snare</span>
+				</button>
+
+				<button id="pad8" data-sound="assets/sounds/tom.wav" data-key="120">
+					<kbd>X</kbd>
+					<span class="sound">tom</span>
+				</button>
+
+				<button id="pad9" data-sound="assets/sounds/tink.wav" data-key="99">
+					<kbd>C</kbd>
+					<span class="sound">tink</span>
+				</button>
+
+			</div>	<!-- end third row -->
+
+		</section>	<!-- end #pads -->
 
 
 
-	<div id="volume-control">
-		<label for="volume">Volume</label>
-		<input type="range" min="0" max="5" step="0.1" value="1" data-control="gain" name="volume">
-	</div> <!-- end #volume-control -->
+		<section id="volume-control">
+			<label for="volume">Volume</label>
+			<input type="range" min="0" max="5" step="0.1" value="1" data-control="gain" name="volume">
+		</section> <!-- end #volume-control -->
 
+		</div> <!-- end #wrapper -->
 
 
 
