add html5 audio elements and playSound function WIP

--- a/index2.html
+++ b/index2.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 
+
 	<div id="wrapper">
 
 		<section id="pads">
@@ -80,6 +81,15 @@
 
 		</div> <!-- end #wrapper -->
 
+  <audio data-key="113" src="sounds/clap.wav"></audio>
+  <audio data-key="119" src="sounds/hihat.wav"></audio>
+  <audio data-key="101" src="sounds/kick.wav"></audio>
+  <audio data-key="97" src="sounds/openhat.wav"></audio>
+  <audio data-key="115" src="sounds/boom.wav"></audio>
+  <audio data-key="100" src="sounds/ride.wav"></audio>
+  <audio data-key="122" src="sounds/snare.wav"></audio>
+  <audio data-key="120" src="sounds/tom.wav"></audio>
+  <audio data-key="99" src="sounds/tink.wav"></audio>
 
 
 
