--- a/index2.html
+++ b/index2.html
@@ -76,27 +76,28 @@
 
 		<section id="volume-control">
 			<label for="volume">Volume</label>
-			<input type="range" min="0" max="5" step="0.1" value="1" data-control="gain" name="volume">
-		</section> <!-- end #volume-control -->
+			<div class="volume-control">
+				<input type="range" min="0" max="5" step="0.1" value="1" data-control="gain" name="volume"></div>
+			</section> <!-- end #volume-control -->
 
 		</div> <!-- end #wrapper -->
 
-  <audio data-key="113" src="sounds/clap.wav"></audio>
-  <audio data-key="119" src="sounds/hihat.wav"></audio>
-  <audio data-key="101" src="sounds/kick.wav"></audio>
-  <audio data-key="97" src="sounds/openhat.wav"></audio>
-  <audio data-key="115" src="sounds/boom.wav"></audio>
-  <audio data-key="100" src="sounds/ride.wav"></audio>
-  <audio data-key="122" src="sounds/snare.wav"></audio>
-  <audio data-key="120" src="sounds/tom.wav"></audio>
-  <audio data-key="99" src="sounds/tink.wav"></audio>
+		<audio data-key="113" src="sounds/clap.wav"></audio>
+		<audio data-key="119" src="sounds/hihat.wav"></audio>
+		<audio data-key="101" src="sounds/kick.wav"></audio>
+		<audio data-key="97" src="sounds/openhat.wav"></audio>
+		<audio data-key="115" src="sounds/boom.wav"></audio>
+		<audio data-key="100" src="sounds/ride.wav"></audio>
+		<audio data-key="122" src="sounds/snare.wav"></audio>
+		<audio data-key="120" src="sounds/tom.wav"></audio>
+		<audio data-key="99" src="sounds/tink.wav"></audio>
 
 
 
 
-	<!-- core JS file -->
-	<script src="assets/js/app.js"></script>
-	<!-- jQuery snippet via Google Developers -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-</body>
-</html>
+		<!-- core JS file -->
+		<script src="assets/js/app.js"></script>
+		<!-- jQuery snippet via Google Developers -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	</body>
+	</html>
