--- a/index2.html
+++ b/index2.html
@@ -75,12 +75,14 @@
 
 
 		<section id="volume-control">
-			<label for="volume">Volume</label>
-			<div class="volume-control">
-				<input type="range" min="0" max="5" step="0.1" value="1" data-control="gain" name="volume"></div>
-			</section> <!-- end #volume-control -->
+			<h4>Volume Panel</h4>
+			<input type="range" min="0" max="5" step="0.1" value="1" data-control="gain" name="volume" />
+<!-- 			<label for="volume">Volume</label> -->
+<!-- 			<div class="volume-control">
+				<input type="range" min="0" max="5" step="0.1" value="1" data-control="gain" name="volume"></div> -->
+		</section> <!-- end #volume-control -->
 
-		</div> <!-- end #wrapper -->
+	</div> <!-- end #wrapper -->
 
 		<audio data-key="113" src="sounds/clap.wav"></audio>
 		<audio data-key="119" src="sounds/hihat.wav"></audio>
