--- a/index2.html
+++ b/index2.html
@@ -75,9 +75,31 @@
 
 
 		<section id="volume-control">
-
+			<label for="volume">Volume Control</label>
+			<div class="slider-wrapper">
+				<input type="range" min="0" max="10" step="0.1" list="tickmarks" />
+				<datalist id="tickmarks">
+					<option value="0" label="0" />
+					<option value="1" />
+					<option value="2" />
+					<option value="3" />
+					<option value="4" />
+					<option value="5" label="5" />
+					<option value="6" />
+					<option value="7" />
+					<option value="8" />
+					<option value="9" />
+					<option value="10" label="10" />
+				</datalist>
+			</div>
 
 		</section> <!-- end #volume-control -->
+
+
+
+
+
+
 
 	</div> <!-- end #wrapper -->
 
