--- a/index2.html
+++ b/index2.html
@@ -5,6 +5,8 @@
 	<title>JS powered synth pad</title>
 	<!-- core CSS file -->
 	<link rel="stylesheet" href="assets/css/style.css">
+	<!-- Google Fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Overpass" rel="stylesheet">
 </head>
 <body>
 
@@ -70,6 +72,8 @@
 
 			</div>	<!-- end third row -->
 
+			<div class="footer">JavaScript powered SynthPad</div>
+
 		</section>	<!-- end #pads -->
 
 
@@ -92,7 +96,8 @@
 					<option value="10" label="10" />
 				</datalist>
 			</div>
-
+			
+			
 		</section> <!-- end #volume-control -->
 
 
